<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_20">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/warningMessageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:text="@string/ai_engine_setup_failed"
            android:textAllCaps="true"
            android:textColor="#333333"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/messageTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:gravity="center"
            android:text="@string/please_contact_support_team"
            android:textColor="#333333"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/warningMessageTxt" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/callSupportBtn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:minWidth="@dimen/margin_100"
            android:text="@string/call_support"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/verified"
            app:cornerRadius="@dimen/margin_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageTxt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>