<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dashboard">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/appToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/dashboard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:theme="@style/ThemeOverlay.AppCompat.Light"
            app:titleTextColor="@color/text_dark" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_searching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/dashcam_scanning"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appToolbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_30"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/dashcam_instruction"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_searching_sub" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_searching_sub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/dashcam_subtext"
            android:textColor="@color/colorBlack"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_searching" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loaderIv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_searching_sub"
            app:lottie_autoPlay="true"
            app:lottie_fileName="scanning.json"
            app:lottie_loop="true" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_circle"
            android:padding="@dimen/margin_50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_searching_sub">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:src="@drawable/dashcam" />
        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>